--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="{% static 'img/botlogo.png' %}">
+
     <title>{% block title %}WhatsApp BOt{% endblock %}</title>
     
     <!-- Bootstrap CSS -->
