--- a/templates/base.html
+++ b/templates/base.html
@@ -247,12 +247,12 @@
                 </a>
             </li>
             <li class="nav-item mt-4">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'chatbot:settings'%}">
                     <i class="fas fa-cog"></i> Settings
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'chatbot:help'%}">
                     <i class="fas fa-question-circle"></i> Help
                 </a>
             </li>
@@ -280,7 +280,7 @@
                         
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                             <li><a class="dropdown-item" href="#"><i class="fas fa-user me-2"></i> Profile</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-cog me-2"></i> Settings</a></li>
+                            <li><a class="dropdown-item" href="{% url 'chatbot:settings'%}"><i class="fas fa-cog me-2"></i> Settings</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt me-2"></i> Logout</a></li>
                         </ul>
