--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+     <link href="{% static 'css/messages.css'%}" rel="stylesheet">
+     <script src="{% static 'js/messages.js'%}"></script>
     
     <!-- Custom CSS -->
     <style>
@@ -282,7 +284,7 @@
                             <li><a class="dropdown-item" href="#"><i class="fas fa-user me-2"></i> Profile</a></li>
                             <li><a class="dropdown-item" href="{% url 'chatbot:settings'%}"><i class="fas fa-cog me-2"></i> Settings</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt me-2"></i> Logout</a></li>
+                            <li><a class="dropdown-item" href="{% url 'chatbot:logout'%}"><i class="fas fa-sign-out-alt me-2"></i> Logout</a></li>
                         </ul>
                     </div>
                 </div>
